# inquizitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  interactive-shell.bat  main.py  pyproject.toml  thesis_model.pkl
.github/ISSUE_TEMPLATE/: bug_report.md  enhancements-for-thesis.md
.github/workflows/: heroku.yml  main_inquizitor.yml  pytest.yml
fastapi_tut/: __init__.py  utils.py
fastapi_tut/api/: deps.py
fastapi_tut/api/api_v1/: api.py
fastapi_tut/commands/: __init__.py  initial_data.py
fastapi_tut/core/: config.py  security.py
fastapi_tut/crud/: __init__.py  base.py  crud_quiz.py  crud_token.py  crud_user.py
fastapi_tut/crud/crud_quiz/: __init__.py  answer.py  attempt.py  choice.py  link.py  question.py  quiz.py
fastapi_tut/db/: base.py  base_class.py  init_db.py  session.py
fastapi_tut/models/: __init__.py  msg.py  quiz.py  revoked_token.py  token.py  user.py
fastapi_tut/models/quiz/: __init__.py  answer.py  answers.py  attempt.py  attempts.py  choice.py  (+5 more)
fastapi_tut/schemas/: __init__.py  msg.py  token.py  user.py
fastapi_tut/static/: vue.global.js
fastapi_tut/templates/: layout.html  login.html
fastapi_tut/tests/: conftest.py  factories.py
inquizitor/: __init__.py  utils.py
inquizitor/api/: deps.py
inquizitor/commands/: __init__.py  accounts.py  attempts.py  initial_data.py
inquizitor/core/: config.py  security.py
inquizitor/crud/: __init__.py  base.py  crud_token.py  crud_user.py
inquizitor/data/: it-exam-2.txt  it-exam.txt  mock-exam.json  mock-exam.txt
inquizitor/db/: base.py  base_class.py  init_db.py  session.py
inquizitor/models/: __init__.py  msg.py  token.py  user.py
inquizitor/tests/: common.py  conftest.py  factories.py
logs/: pytest-logs.txt
tests/: __init__.py
(+56 files in other folders)
