[tool.poetry]
name = "fastapi_tut"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.29"
psycopg2 = "^2.9.3"
python-dotenv = "^0.19.2"
pydantic = {extras = ["email"], version = "^1.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
Faker = "^11.3.0"
alembic = "^1.7.5"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
